--- a/mvn_test.yml
+++ b/mvn_test.yml
@@ -2,12 +2,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dpl-nginx
+  name: mvn-project
 spec:
   selector:
     matchLabels:
-      app: dpl-nginx
-  replicas: 1
+      app: mvn-project
+  replicas: 2
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -17,24 +17,26 @@ spec:
   template:
     metadata:
       labels:
-        app: dpl-nginx
+        app: mvn-project
     spec:
       containers:
       - name: master
-        image: nginx:1.12
+        image:  testdomainname.info:5050/wocheon/mvn-project
         ports:
-        - containerPort: 80
+        - containerPort: 8080
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: mvn-project-ndp
   labels:
-    app: dpl-nginx
+    app: mvn-project
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - port: 8080
+      nodePort: 30001
   selector:
-    app: dpl-nginx
+    app: mvn-project
+~
