--- a/mvn_test.yml
+++ b/mvn_test.yml
@@ -2,11 +2,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dpl-nginx
+  name: mvn-project
 spec:
   selector:
     matchLabels:
-      app: dpl-nginx
+      app: mvn-project
   replicas: 1
   strategy:
     type: RollingUpdate
@@ -17,24 +17,28 @@ spec:
   template:
     metadata:
       labels:
-        app: dpl-nginx
+        app: mvn-project
     spec:
+      imagePullSecrets:
+      - name: regcred
       containers:
       - name: master
-        image: nginx:1.12
+        image: testdomainname.info:5050/wocheon/mvn_project
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: mvn-project-ndp
   labels:
-    app: dpl-nginx
+    app: mvn-project
 spec:
   type: NodePort
   ports:
-    - port: 80
+    - port: 8080
+      nodePort: 30001
   selector:
-    app: dpl-nginx
+    app: mvn-project
